--- a/src/main/resources/templates/customers/login.html
+++ b/src/main/resources/templates/customers/login.html
@@ -25,36 +25,38 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 
-<body>
+<body style="width: 100%; background: linear-gradient(to right, rgb(94, 145, 253),rgb(0, 98, 226)); padding-top: 10%;">
 
-    <div th:replace="customers/fragments/header::customersHeader"></div>
-    
-    <div class="dropdown-menu">
-        <form class="px-4 py-3">
-          <div class="form-group">
-            <label for="exampleDropdownFormEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
-          </div>
-          <div class="form-group">
-            <label for="exampleDropdownFormPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-          </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="dropdownCheck">
-            <label class="form-check-label" for="dropdownCheck">
-              Remember me
-            </label>
-          </div>
-          <button type="submit" class="btn btn-primary">Sign in</button>
-        </form>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">New around here? Sign up</a>
-        <a class="dropdown-item" href="#">Forgot password?</a>
+  <div class="container">
+    <div class="row">
+      <div class="lg-4 md-6 sm-12" style="background: white; border-radius: 5px; padding: 10px;">
+          <form class="px-4 py-3">
+            <h4 style="padding: 30px; text-align: center;">Login</h4>
+            <div class="form-group">
+              <label for="formEmail">Email address</label>
+              <input type="email" class="form-control" id="formEmail" placeholder="email@example.com">
+            </div>
+            <div class="form-group">
+              <label for="formPassword">Password</label>
+              <input type="password" class="form-control" id="formPassword" placeholder="Password">
+            </div>
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="dropdownCheck">
+              <label class="form-check-label" for="dropdownCheck">
+                Remember me
+              </label>
+            </div>
+            <div onclick="login()" class="btn btn-primary">Sign in</div>
+          </form>
+          <div class="col" style="background-color: coral; color: white; display: none;" id="wrongAlert"></div>
+          <div class="col" style="background-color: rgb(135, 255, 80); color: white;  display: none;" id="successAlert"></div>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">New around here? Sign up</a>
+          <a class="dropdown-item" href="#">Forgot password?</a>
+      </div>
     </div>
-
-    <div th:replace="customers/fragments/footer::customersFooter"></div>
-
-
+  </div>
+    
 <!-- Js Plugins -->
 <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
@@ -66,6 +68,61 @@
 <script th:src="@{/js/owl.carousel.min.js}"></script>
 <script th:src="@{/js/jquery.nicescroll.min.js}"></script>
 <script th:src="@{/js/main.js}"></script>
+
+<script>
+  function login (){
+    var email = document.getElementById("formEmail").value;
+    var password = document.getElementById("formPassword").value;
+
+    console.log(email+" "+password);
+    fetch("http://localhost:8081/api/customer/login",{
+       // Adding method type 
+      method: "POST", 
+      
+      // Adding body or contents to send 
+      body: JSON.stringify({ 
+          email: email, 
+          password: password
+      }), 
+        
+      // Adding headers to the request 
+      headers: { 
+          "Content-type": "application/json; charset=UTF-8"
+      } 
+    })
+    .then(response => response.json())
+    .then(result => {
+        console.log(result);
+        if(result.status===true){
+          document.getElementById("successAlert").innerHTML="Login Succes";
+          document.getElementById("wrongAlert").style.display="none";
+          document.getElementById("successAlert").style.display="block";
+          var userData = result.payload.data;
+          localStorage.setItem("token", userData.token);
+          localStorage.setItem("iduser", userData.id);
+          localStorage.setItem("name", userData.name);
+          localStorage.setItem("email", userData.email);
+          localStorage.setItem("roles", userData.roles);
+          window.location.href = "./";
+          // console.log(localStorage.getItem('email'));
+        }
+        else{
+          document.getElementById("wrongAlert").innerHTML=result.messages;
+          document.getElementById("successAlert").style.display="none";
+          document.getElementById("wrongAlert").style.display="block";
+          
+          // console.log(localStorage.getItem('email'));
+        }
+
+    }).catch(err => {
+        errorStat = err.name === 'AbortError'? 1 : 2;
+    });
+
+    
+    
+  }
+
+</script>
 </body>
 
 </html>
