--- a/src/main/resources/templates/admins/addCategory.html
+++ b/src/main/resources/templates/admins/addCategory.html
@@ -27,7 +27,7 @@
                 <div class="container">
                     <div class="row">
                         <!-- BAGIAN INI AKAN MENG-HANDLE FORM INPUT NEW CATEGORY  -->
-                        <div class="col-md-4">
+                        <!-- <div class="col-md-4">
                             <div class="card">
                                 <div class="card-header">
                                     <h4 class="card-title">New Category</h4>
@@ -47,16 +47,17 @@
 
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- BAGIAN INI AKAN MENG-HANDLE FORM INPUT NEW CATEGORY  -->
 
                         <!-- BAGIAN INI AKAN MENG-HANDLE TABLE LIST CATEGORY  -->
-                        <div class="col-md-8">
+                        <div class="col-md-12">
                             <div class="card">
                                 <div class="card-header">
                                     <h4 class="card-title">Category List</h4>
                                 </div>
                                 <div class="card-body">
+                                    <a href="" class="btn btn-dark btn-block" data-toggle="modal" data-target="#addCategoryModal">Add Category</a><br>
                                     <div class="table-responsive">
                                         <table id="dataTable" class="table table-hover table-bordered">
                                             <thead>
@@ -74,15 +75,19 @@
                                                     <td>Date Created</td>
                                                     <td>
                                                         <div class="btn-group btn-group-sm">
+                                                            <span>
                                                             <a href="" class="btn btn-warning" data-toggle="modal"
                                                                 data-target="#editCategoryModal"
                                                                 th:onclick="'javascript:getCategoryById(' + ${category.id} + ');'"><i
                                                                     class="fas fa-edit"></i></a>
+                                                                </span>
+                                                                <span>
                                                             <a href="" class="btn btn-danger" data-toggle="modal"
                                                                 data-target="#deleteCategoryModal"
                                                                 th:onclick="'javascript:setDeleteId(' + ${category.id} + ');'"><i
                                                                     class="fas fa-trash"></i></a>
-                                                        </div>
+                                                       </span>
+                                                                </div>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -100,6 +105,39 @@
         </div>
     </div>
 
+     <!-- modal edit -->
+     <div class="modal fade" id="addCategoryModal">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Add Category</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- /.modal form body -->
+                    <form role="form" id="createCategoryForm">
+                        
+                        <div class="card-body">
+                            <div class="form-group">
+                                <label for="name">Category Title</label>
+                                <input type="text" id="name" class="form-control" name="name" required>
+                            </div>
+                        </div>
+                        <!-- /.card-body -->
+                    </form>
+                </div>
+                <div class="modal-footer justify-content-between">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button id="createCategory" type="button" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
     <!-- Modal For Deleting Category -->
     <div class="modal fade" id="deleteCategoryModal">
         <div class="modal-dialog modal-sm">
