--- a/src/main/resources/templates/admins/fragments/sidenav.html
+++ b/src/main/resources/templates/admins/fragments/sidenav.html
@@ -18,7 +18,7 @@
                     <div class="sb-sidenav-menu">
                         <div class="nav">
                             <div class="sb-sidenav-menu-heading">Core</div>
-                            <a class="nav-link" th:href="@{/}">
+                            <a class="nav-link" th:href="@{admin/}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard Transaction
                             </a>
@@ -30,8 +30,8 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" th:href="@{./listadmin}">Admin List</a>
-                                    <a class="nav-link" th:href="@{./addAdmin}">Add New Admin</a>
+                                    <a class="nav-link" th:href="@{admin/listadmin}">Admin List</a>
+                                    <a class="nav-link" th:href="@{admin/addAdmin}">Add New Admin</a>
                                 </nav>
                             </div>
                             <a class="nav-link collapsed" th:href="@{#}" data-toggle="collapse" data-target="#collapseLayouts2" aria-expanded="false" aria-controls="collapsePages">
@@ -41,7 +41,7 @@
                             </a>
                             <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" th:href="@{./listadmin}">Customers List</a>
+                                    <a class="nav-link" th:href="@{admin/listadmin}">Customers List</a>
                                 </nav>
                             </div>
                             <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-parent="#sidenavAccordion">
@@ -71,13 +71,17 @@
                                 </nav>
                             </div>
                             <div class="sb-sidenav-menu-heading">Product</div>
-                            <a class="nav-link" th:href="@{./addProduct}">
+                            <a class="nav-link" th:href="@{admin/addProduct}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 Add New Product
                             </a>
-                            <a class="nav-link" th:href="@{./product}">
+                            <a class="nav-link" th:href="@{admin/product}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Product List
+                            </a>
+                            <a class="nav-link" th:href="@{admin/order}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-cart-arrow-down"></i></div>
+                                Order List
                             </a>
                         </div>
                     </div>
