finalisasi interface crud sederhana

--- a/src/main/resources/templates/admins/addCategory.html
+++ b/src/main/resources/templates/admins/addCategory.html
@@ -57,7 +57,10 @@
                                     <h4 class="card-title">Category List</h4>
                                 </div>
                                 <div class="card-body">
-                                    <a href="" class="btn btn-dark btn-block" data-toggle="modal" data-target="#addCategoryModal">Add Category</a><br>
+                                    <div>    <a href="" class="btn btn-dark" data-toggle="modal"
+                                            data-target="#addCategoryModal">Add Category</a>
+                                        </div>
+                                            <br>
                                     <div class="table-responsive">
                                         <table id="dataTable" class="table table-hover table-bordered">
                                             <thead>
@@ -74,20 +77,21 @@
                                                     <td><strong th:text="${category.name}">Category</strong></td>
                                                     <td>Date Created</td>
                                                     <td>
-                                                        <div class="btn-group btn-group-sm">
+                                                        <div class="btn-toolbar btn-toolbar-sm btn-block">
                                                             <span>
-                                                            <a href="" class="btn btn-warning" data-toggle="modal"
-                                                                data-target="#editCategoryModal"
-                                                                th:onclick="'javascript:getCategoryById(' + ${category.id} + ');'"><i
-                                                                    class="fas fa-edit"></i></a>
-                                                                </span>
-                                                                <span>
-                                                            <a href="" class="btn btn-danger" data-toggle="modal"
-                                                                data-target="#deleteCategoryModal"
-                                                                th:onclick="'javascript:setDeleteId(' + ${category.id} + ');'"><i
-                                                                    class="fas fa-trash"></i></a>
-                                                       </span>
-                                                                </div>
+                                                                <a href="" class="btn btn-warning mr-2"
+                                                                    data-toggle="modal" data-target="#editCategoryModal"
+                                                                    th:onclick="'javascript:getCategoryById(' + ${category.id} + ');'"><i
+                                                                        class="fas fa-edit"></i></a>
+                                                            </span>
+                                                            <span>
+                                                                <a href="" class="btn btn-danger mr-2"
+                                                                    data-toggle="modal"
+                                                                    data-target="#deleteCategoryModal"
+                                                                    th:onclick="'javascript:setDeleteId(' + ${category.id} + ');'"><i
+                                                                        class="fas fa-trash"></i></a>
+                                                            </span>
+                                                        </div>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -105,8 +109,8 @@
         </div>
     </div>
 
-     <!-- modal edit -->
-     <div class="modal fade" id="addCategoryModal">
+    <!-- modal edit -->
+    <div class="modal fade" id="addCategoryModal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -118,7 +122,7 @@
                 <div class="modal-body">
                     <!-- /.modal form body -->
                     <form role="form" id="createCategoryForm">
-                        
+
                         <div class="card-body">
                             <div class="form-group">
                                 <label for="name">Category Title</label>
@@ -202,7 +206,8 @@
     <div th:include="admins/fragments/footer::templateScript"></div>
 
     <script>
-        $('#createCategory').on('click', function () {
+        $('#createCategory').on('click', function ()
+        {
             var name = $("#name").val();
             var category = new Object();
             category.name = name;
@@ -211,24 +216,30 @@
                 method: "POST",
                 data: JSON.stringify(category),
                 contentType: "application/json;odata=verbose",
-                success: function (response) {
-                    if (response.status == true) {
+                success: function (response)
+                {
+                    if (response.status == true)
+                    {
                         alert("data success!");
-                    } else {
+                    } else
+                    {
                         console.log('Anda Gagal Menambahkan Data. Mohon Coba Kembali!');
                     }
                 },
-                error: function () {
+                error: function ()
+                {
                     console.log('Anda Gagal Menambahkan Data. Mohon Coba Kembali!');
                 }
             });
         });
 
-        function setDeleteId(id) {
+        function setDeleteId(id)
+        {
             $('#deleteId').val(id);
         }
 
-        $('#deleteCategory').on('click', function () {
+        $('#deleteCategory').on('click', function ()
+        {
             var id = $('#deleteId').val();
             var category = new Object();
             category.id = id;
@@ -237,39 +248,47 @@
                 method: "DELETE",
                 data: JSON.stringify(category),
                 contentType: "application/json",
-                success: function (response) {
-                    if (response.status == true) {
+                success: function (response)
+                {
+                    if (response.status == true)
+                    {
                         $('#deleteCategoryModal').modal('toggle');
                         alert("Hapus sukses!");
-                    } else {
+                    } else
+                    {
                         console.log('Anda Gagal Menambahkan Data. Mohon Coba Kembali!');
                     }
                 },
-                error: function () {
+                error: function ()
+                {
                     console.log('Anda Gagal Menambahkan Data. Mohon Cobassss Kembali!');
                 }
             });
         });
 
-        function getCategoryById(id) {
+        function getCategoryById(id)
+        {
             $.ajax({
                 url: "http://127.0.0.1:8081/api/category/get",
                 method: "GET",
                 data: { id: id },
-                success: function (response) {
+                success: function (response)
+                {
                     $('#editId').val(null);
                     $('#editName').val(null);
 
                     $('#editId').val(response.payload.id);
                     $('#editName').val(response.payload.name);
                 },
-                error: function () {
+                error: function ()
+                {
                     console.log("Error");
                 }
             });
         }
 
-        $('#updateCategory').on('click', function () {
+        $('#updateCategory').on('click', function ()
+        {
             var id = $("#editId").val();
             var name = $("#editName").val();
             var category = new Object();
@@ -280,15 +299,19 @@
                 method: "POST",
                 data: JSON.stringify(category),
                 contentType: "application/json",
-                success: function (response) {
-                    if (response.status == true) {
+                success: function (response)
+                {
+                    if (response.status == true)
+                    {
                         $('#editCategoryModal').modal('toggle');
                         table.ajax.reload();
-                    } else {
+                    } else
+                    {
                         console.log("Error1");
                     }
                 },
-                error: function () {
+                error: function ()
+                {
                     console.log("Error");
                 }
             });
