--- a/src/main/resources/templates/admins/fragments/header.html
+++ b/src/main/resources/templates/admins/fragments/header.html
@@ -13,6 +13,13 @@
         crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
         crossorigin="anonymous"></script>
+    <script>
+        var token = localStorage.getItem('token');
+        var roles = localStorage.getItem('roles');
+        if (token === null) {
+            window.location.href = "../admin/login";
+        }
+    </script>
 </head>
 
 <body class="sb-nav-fixed">
@@ -39,22 +46,13 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                         <a class="dropdown-item" href="./settings">Settings</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="../login">Logout</a>
+                        <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
                     </div>
                 </li>
             </ul>
         </nav>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-    <script th:src="@{/admins/js/scripts.js}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-    <script th:src="@{/admins/assets/demo/chart-area-demo.js}"></script>
-    <script th:src="@{/admins/assets/demo/chart-bar-demo.js}"></script>
-    <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
-    <script th:src="@{/admins/assets/demo/datatables-demo.js}"></script>
+
 </body>
 
 </html>
