--- a/src/main/resources/templates/admins/login.html
+++ b/src/main/resources/templates/admins/login.html
@@ -102,12 +102,12 @@
                 contentType: "application/json",
                 success: function (response) {
                     if (response.status == true) {
-                        var adminData = response.payload.data;
+                        var adminData = response.payload;
                         localStorage.setItem("token", adminData.token);
-                        localStorage.setItem("iduser", adminData.id);
-                        localStorage.setItem("name", adminData.name);
-                        localStorage.setItem("email", adminData.email);
-                        localStorage.setItem("roles", adminData.roles);
+                        localStorage.setItem("iduser", adminData.data.id);
+                        localStorage.setItem("name", adminData.data.name);
+                        localStorage.setItem("email", adminData.data.email);
+                        localStorage.setItem("roles", adminData.data.roles);
                         alert("login success!");
                         window.location.href = "./";
                     } else {
